tests/agl/rejections/type/invariance.agl
record Box[T]
  value: T

let b: Box[text] = Box(value = 5)
b
